docker/k8s-aws-eks-manifest-examples/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: foo
  name: dotcms-foo-prod
spec:
  selector:
    matchLabels:
      app: dotcms
      fullname: dotcms-foo-prod
  serviceName: dotcms-foo-prod
  replicas: 2
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
        aws-region: us-east-1
      labels:
        app: dotcms
        env: prod
        ver: '23.10'
        cust: foo
        fullname: dotcms-foo-prod
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: dotcms
        image: dotcms/dotcms:23.10.24_lts_v12_661cef9
        resources:
          requests:
            cpu: '.5'
            memory: 6Gi
          limits:
            cpu: '2'
            memory: 6Gi
        ports:
        - containerPort: 8080
          name: api
        - containerPort: 8081
          name: web-insecure
        - containerPort: 8082
          name: web-secure
        volumeMounts:
        - name: dotcms-shared
          mountPath: /data/shared
        lifecycle:
          postStart:
            exec:
              command:
              - /bin/bash
              - -c
              - if [ ! -d /data/shared/assets/.backup ]; then mkdir /data/shared/assets/.backup;
                fi; ln -s /data/shared/assets/.backup /data/local/dotsecure/backup;
        startupProbe:
          httpGet:
            path: /api/v1/heavy
            port: 8082
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 18
          timeoutSeconds: 1
        livenessProbe:
          httpGet:
            path: /api/v1/light
            port: 8082
          initialDelaySeconds: 1
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/v1/light
            port: 8082
          initialDelaySeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 1
          timeoutSeconds: 5
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: fullname
                  operator: In
                  values:
                  - dotcms-foo-prod
              topologyKey: kubernetes.io/hostname
      volumes:
      - name: dotcms-shared
        persistentVolumeClaim:
          claimName: foo-prod-efs-pvc
