docker/k8s-aws-eks-manifest-examples/services.yaml
---
kind: Service
apiVersion: v1
metadata:
  namespace: foo
  name: foo-prod-pp
spec:
  selector:
    fullname: dotcms-foo-prod
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  clusterIP: None
