docker/k8s-aws-eks-manifest-examples/alb.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: foo
  name: foo-prod-svc
spec:
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
  type: NodePort
  selector:
    fullname: dotcms-foo-prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo-prod-alb
  annotations:
    kubernetes.io/ingress.class: alb
    service.beta.kubernetes.io/aws-load-balancer-internal: 'false'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: dotcms.environment.name=foo
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: '8082'
    alb.ingress.kubernetes.io/healthcheck-path: /api/v1/alive
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '5'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:xxx:certificate/xxx
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-FS-1-2-Res-2020-10
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=18000
    alb.ingress.kubernetes.io/security-groups: sg-xxx
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=300,access_logs.s3.enabled=true,access_logs.s3.bucket=dotcms-foo-access-logs,access_logs.s3.prefix=foo/prod
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-1:xxx:regional/webacl/foo/xxx
spec:
  rules:
    - host: prod.foo.example.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foo-prod-svc
                port:
                  number: 8082
